tests/fixtures/errors/invalid_unterminated_second_block.puml
@startuml
A -> B : one
@enduml
@startuml
B -> A : two
